<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_graph_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home_title" />

    <item
        android:id="@+id/nav_graph_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_title" />

    <item
        android:id="@+id/nav_graph_qr_scan"
        android:icon="@drawable/ic_qr_code_scanner"
        android:title="@string/qr_scan_title" />

    <item
        android:id="@+id/nav_graph_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile_title" />

    <item
        android:id="@+id/nav_graph_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting_title" />

</menu>